# mlflow_tutorial

./: .gitignore  1_OpenAI_Tracking.ipynb  2_Evaluation_Tracking.ipynb  2_LangChain_Tracking.ipynb  4_Prompt_Tracking_Evaluation.ipynb  5_Prompt_Optimization.ipynb  6_Model_Gateway.ipynb  README.md  pyproject.toml
mlartifacts/1/traces/tr-51f0cfdf5ed313e01daa6539a01670c4/artifacts/: traces.json
