[project]
name = "mlflow-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gepa>=0.0.26",
    "ipykernel>=7.3.0",
    "langchain-tavily>=0.2.18",
    "langchain[openai]>=1.3.8",
    "litellm>=1.88.1",
    "mlflow>=3.13.0",
    "notebook>=7.5.7",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
]
